Project2/electro-chart/traefik/electro-ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name:  electro-api-ingress-with-traefik
  namespace: my-ns1
spec:
  entryPoints:
    - web
    - websecure 
  routes:
    - match:   PathPrefix(`/`)
      kind: Rule
      services:
        - name: electro-api
          port: 5000
          #nodePortLB: true   # this  line to tell traefik  to direct the traffic to nodeport service if you don't  want that->okay remove it and it will redirect the traffic to the clusterip on the deploy pod
